--- a/src/app/components/sidebar/style.scss
+++ b/src/app/components/sidebar/style.scss
@@ -56,7 +56,7 @@
     }
   }
 
-  &::-webkit-scrollbar { width: 8px; }
+  &::-webkit-scrollbar { width: 2px; }
 }
 
 @media (prefers-color-scheme: dark) {
